<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@drawable/item_background"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/orderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_id"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/orderTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_time"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/orderStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price_empty"
        android:textSize="14sp"
        android:textStyle="bold" />
</LinearLayout>