<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/item_background"
    android:elevation="4dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="4dp">

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/image_background"
            android:contentDescription="@string/product_image"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/zero_price"
            android:textColor="@color/primary"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decreaseQuantityButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle_button"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:inputType="number"
            android:paddingHorizontal="4dp"
            android:text="@string/default_quantity"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/increaseQuantityButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle_button"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_button"
        android:paddingHorizontal="16dp"
        android:text="@string/remove"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp" />
</LinearLayout>